2009-04-05  Alberto Garcia  <agarcia@igalia.com>

	* src/lastfm-ws.h
	* src/lastfm-ws.c:
	Initial implementation of the Last.fm Web Services API v2.0

2009-04-05  Alberto Garcia  <agarcia@igalia.com>

	* src/playlist.h
	* src/controller.c
	* src/metadata.[ch]
	* src/uimisc.[ch]
	* src/xmlrpc.[ch]:
	Rename request_type to LastfmTrackComponent

2009-04-05  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c (finish_playing_track):
	Love/ban rating was being reset before scrobbling a track. Fixed.

2009-04-05  Alberto Garcia  <agarcia@igalia.com>

	* src/http.h
	* src/http.c (http_post_buffer)
	* src/scrobbler.c (rsp_set_nowplaying, rsp_scrobble)
	* src/xmlrpc.c (xmlrpc_send_request):
	Add optional 'retbufsize' param to http_post_buffer()

2009-04-04  Alberto Garcia  <agarcia@igalia.com>

	* src/metadata.c
	* src/protocol.c
	* src/scrobbler.c
	* src/uimisc.c
	* src/vgl-main-window.c
	* src/xmlrpc.c:
	Use arrays instead of pointers for static strings.

2009-04-04  Alberto Garcia  <agarcia@igalia.com>

	* src/protocol.c (lastfm_parse_track):
	Check for empty free track URLs

2009-04-04  Alberto Garcia  <agarcia@igalia.com>

	* src/util.c (xml_find_node):
	Allow empty lists (node == NULL)

2009-04-03  Alberto Garcia  <agarcia@igalia.com>

	* src/*.[ch]:
	Change all function declarations to use the same formatting rules.

2009-04-03  Alberto Garcia  <agarcia@igalia.com>

	* src/metadata.c (parse_xml_tags)
	* src/protocol.c (lastfm_parse_track, lastfm_parse_playlist)
	* src/userconfig.c (vgl_user_cfg_read)
	* src/util.c (xml_find_node)
	* src/vgl-bookmark-mgr.c (vgl_bookmark_mgr_load_from_disk):
	Replace xmlStrcmp() by xmlStrEqual() for speed and readability

2009-03-27  Alberto Garcia  <agarcia@igalia.com>

	* TRANSLATORS
	* po/fr.po
	* src/uimisc.c:
	Updated French translation, by Jean-Alexandre Angles d'Auriac

2009-03-21  Alberto Garcia  <agarcia@igalia.com>

	* src/metadata.c (parse_xml_tags): Fix infinite loop.

2009-03-18  Alberto Garcia  <agarcia@igalia.com>
